# QT_FOC

./: .gitignore  CMakeLists.txt  README.md
docs/: JSON_Message_Format.md  JSON_Protocol.md
src/core/: DataParser.cpp  DataParser.h  SerialPortManager.cpp  SerialPortManager.h
src/models/: ControlMode.h  FOCParameters.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/pages/: DashboardPage.cpp  DashboardPage.h  MotorAPage.cpp  MotorAPage.h  MotorBPage.cpp  MotorBPage.h  SystemPage.cpp  SystemPage.h  TuningPage.cpp  TuningPage.h  WaveformPage.cpp  WaveformPage.h
src/ui/styles/: StyleSheet.cpp  StyleSheet.h
src/ui/widgets/: Card.cpp  Card.h  ControlOutputCard.cpp  ControlOutputCard.h  ElectricalStatusCard.cpp  ElectricalStatusCard.h  FOCDebugCard.cpp  FOCDebugCard.h  MotorStatusCard.cpp  MotorStatusCard.h  NavBar.cpp  NavBar.h  StatusBadge.cpp  StatusBadge.h  TopBar.cpp  TopBar.h
